--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
         integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" type="text/css" href="../css/myStyle.css">
+        <link rel="stylesheet" type="text/css" href="myStyle.css">
     </head>
     <body>
         <div class="container">
             <a href="index.html">
-                <img src="../img/RedSoxLogo.png" id="main_logo" />
+                <img src="RedSoxLogo.png" id="main_logo" />
             </a>
             <h1>Welcome to Edward Kang's Boston Red Sox Information Webpage</h1>
             <div class="row" id="menu_list">
