--- a/standing.html
+++ b/standing.html
@@ -8,12 +8,12 @@
         integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" type="text/css" href="../css/myStyle.css">
+        <link rel="stylesheet" type="text/css" href="myStyle.css">
     </head>
     <body>
         <div class="container">
             <a href="index.html">
-                <img src="../img/RedSoxLogo.png" id="main_logo" />
+                <img src="RedSoxLogo.png" id="main_logo" />
             </a>
             <h1>Welcome to Edward Kang's Boston Red Sox Information Webpage</h1>
             <div class="row" id="menu_list">
@@ -46,7 +46,7 @@
                         <th>L10</th>
                     </tr>
                     <tr>
-                        <td><img src="../img/redsox.png"/>Red Sox</td>
+                        <td><img src="redsox.png"/>Red Sox</td>
                         <td>53</td>
                         <td>27</td>
                         <td>.671</td>
@@ -56,7 +56,7 @@
                         <td>7-3</td>
                     </tr>
                     <tr>
-                        <td><img src="../img/yankees.png"/>Yankees</td>
+                        <td><img src="yankees.png"/>Yankees</td>
                         <td>52</td>
                         <td>26</td>
                         <td>.667</td>
@@ -66,7 +66,7 @@
                         <td>6-4</td>
                     </tr>
                     <tr>
-                        <td><img src="../img/rays.png"/>Rays</td>
+                        <td><img src="rays.png"/>Rays</td>
                         <td>39</td>
                         <td>41</td>
                         <td>.488</td>
@@ -76,7 +76,7 @@
                         <td>7-3</td>
                     </tr>
                     <tr>
-                        <td><img src="../img/bluejays.png"/>Blue Jays</td>
+                        <td><img src="bluejays.png"/>Blue Jays</td>
                         <td>37</td>
                         <td>43</td>
                         <td>.463</td>
@@ -86,7 +86,7 @@
                         <td>5-5</td>
                     </tr>
                     <tr>
-                        <td><img src="../img/orioles.png"/>Orioles</td>
+                        <td><img src="orioles.png"/>Orioles</td>
                         <td>23</td>
                         <td>57</td>
                         <td>.288</td>
