css properties, selectors, @media query

--- a/roster.html
+++ b/roster.html
@@ -15,85 +15,81 @@
             <a href="index.html">
                 <img src="RedSoxLogo.png" id="main_logo" />
             </a>
-            <h1>Welcome to Edward Kang's Boston Red Sox Information Webpage</h1>
+            <h1 class="text-center">Welcome to Edward Kang's Boston Red Sox Information Webpage</h1>
             <div class="row" id="menu_list">
                 <div class="col-sm">
                     <a href="roster.html">
-                        <span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span> Roster
+                        <p class="text-center"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span> Roster</p>
                     </a>
                 </div>
                 <div class="col-sm">
                     <a href="standing.html">
-                        <span class="glyphicon glyphicon-bullhorn" aria-hidden="true"></span> AL East Standing
+                        <p class="text-center"><span class="glyphicon glyphicon-bullhorn" aria-hidden="true"></span> AL East Standing</p>
                     </a>
                 </div>
                 <div class="col-sm">
                     <a href="site.html">
-                        <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> Related Sites
+                        <p class="text-center"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> Related Sites</p>
                     </a>
                 </div>
             </div>
             <div class="container">
                 <h2>Current 40-Man Roster</h2>
                 <div class="row">
-                    <div class="col-sm">
+                    <div class="col-lg">
                         <ul>
-                            <li>Matt Barnes</li>
-                            <li>Craig Kimbrel</li>
-                            <li>Joe Kelly</li>
-                            <li>Brian Johnson</li>
-                            <li>Rick Porcello</li>
-
-                            <li>Heath Hembree</li>
-                            <li>Justin Haley</li>
-                            <li>David Price</li>
-                            <li>Eduardo Rodriguez</li>
-                            <li>Brandon Workman</li>
+                            <li><a href="https://www.baseball-reference.com/players/b/barnema01.shtml">Matt Barnes</a></li>
+                            <li><a href="https://www.baseball-reference.com/players/k/kimbrcr01.shtml">Craig Kimbrel</a></li>
+                            <li><a href="https://www.baseball-reference.com/players/k/kellyjo05.shtml">Joe Kelly</a></li>
+                            <li><a href="https://www.baseball-reference.com/players/j/johnsbr02.shtml">Brian Johnson</a></li>
+                            <li><a href="https://www.baseball-reference.com/players/p/porceri01.shtml">Rick Porcello</a></li>
+                            <li><a href="https://www.baseball-reference.com/players/h/hembrhe01.shtml">Heath Hembree</a></li>
+                            <li><a href="https://www.baseball-reference.com/players/h/haleyju01.shtml">Justin Haley</a></li>
+                            <li><a href="https://www.baseball-reference.com/players/p/priceda01.shtml">David Price</a></li>
+                            <li><a href="https://www.baseball-reference.com/players/r/rodried05.shtml">Eduardo Rodriguez</a></li>
+                            <li><a href="https://www.baseball-reference.com/players/w/workmbr01.shtml">Brandon Workman</a></li>
                         </ul>
                     </div>
-                    <div class="col-sm">
+                    <div class="col-lg">
                         <ul>
-                            <li>Hector Velazquez</li>
-                            <li>Chris Sale</li>
-                            <li>Steve Pearce</li>
-                            <li>Christian Vazquez</li>
-                            <li>Blake Swihart</li>
-
-                            <li>Eduardo Nunez</li>
-                            <li>Mitch Moreland</li>
-                            <li>J.D. Martinez</li>
-                            <li>Jackie Bradly Jr.</li>
-                            <li>Tzu-Wei Lin</li>
+                            <li><a href="https://www.baseball-reference.com/players/v/velazhe01.shtml">Hector Velazquez</a></li>
+                            <li><a href="https://www.baseball-reference.com/players/s/salech01.shtml">Chris Sale</a></li>
+                            <li><a href="https://www.baseball-reference.com/players/p/pearcst01.shtml">Steve Pearce</a></li>
+                            <li><a href="https://www.baseball-reference.com/players/v/vazquch01.shtml">Christian Vazquez</a></li>
+                            <li><a href="https://www.baseball-reference.com/players/s/swihabl01.shtml">Blake Swihart</a></li>
+                            <li><a href="https://www.baseball-reference.com/players/n/nunezed02.shtml">Eduardo Nunez</a></li>
+                            <li><a href="https://www.baseball-reference.com/players/m/morelmi01.shtml">Mitch Moreland</a></li>
+                            <li><a href="https://www.baseball-reference.com/players/m/martijd02.shtml">J.D. Martinez</a></li>
+                            <li><a href="https://www.baseball-reference.com/players/b/bradlja02.shtml">Jackie Bradly Jr.</a></li>
+                            <li><a href="https://www.baseball-reference.com/players/l/lintz02.shtml">Tzu-Wei Lin</a></li>
                         </ul>
                     </div>
-                    <div class="col-sm">
+                    <div class="col-lg">
                         <ul>
-                            <li>Sandy Leon</li>
-                            <li>Andrew Benintendi</li>
-                            <li>Mookie Betts</li>
-                            <li>Brock Holt</li>
-                            <li>Xander Bogaerts</li>
-
-                            <li>Rafael Devers</li>
-                            <li>Carson Smith</li>
-                            <li>Tyler Thornburg</li>
-                            <li>Austin Maddox</li>
-                            <li>Steven Wright</li>
+                            <li><a href="https://www.baseball-reference.com/players/l/leonsa01.shtml">Sandy Leon</a></li>
+                            <li><a href="https://www.baseball-reference.com/players/b/beninan01.shtml">Andrew Benintendi</a></li>
+                            <li><a href="https://www.baseball-reference.com/players/b/bettsmo01.shtml">Mookie Betts</a></li>
+                            <li><a href="https://www.baseball-reference.com/players/h/holtbr01.shtml">Brock Holt</a></li>
+                            <li><a href="https://www.baseball-reference.com/players/b/bogaexa01.shtml">Xander Bogaerts</a></li>
+                            <li><a href="https://www.baseball-reference.com/players/d/deverra01.shtml">Rafael Devers</a></li>
+                            <li><a href="https://www.baseball-reference.com/players/s/smithca02.shtml">Carson Smith</a></li>
+                            <li><a href="https://www.baseball-reference.com/players/t/thornty01.shtml">Tyler Thornburg</a></li>
+                            <li><a href="https://www.baseball-reference.com/players/m/maddoau01.shtml">Austin Maddox</a></li>
+                            <li><a href="https://www.baseball-reference.com/players/w/wrighst01.shtml">Steven Wright</a></li>
                         </ul>
                     </div>
-                    <div class="col-sm">
+                    <div class="col-lg">
                         <ul>
-                            <li>Drew Pomeranz</li>
-                            <li>Dustin Pedroia</li>
-                            <li>Jalen Beeks</li>
-                            <li>Marcus Walden</li>
+                            <li><a href="https://www.baseball-reference.com/players/p/pomerdr01.shtml">Drew Pomeranz</a></li>
+                            <li><a href="https://www.baseball-reference.com/players/p/pedrodu01.shtml">Dustin Pedroia</a></li>
+                            <li><a href="https://www.baseball-reference.com/players/b/beeksja01.shtml">Jalen Beeks</a></li>
+                            <li><a href="https://www.baseball-reference.com/players/w/waldema01.shtml">Marcus Walden</a></li>
                             <li>Williams Jerez</li>
-
                             <li>Chandler Shepherd</li>
-                            <li>Bobby Poyner</li>
+                            <li><a href="https://www.baseball-reference.com/players/p/poynebo01.shtml">Bobby Poyner</a></li>
                             <li>Ty Buttrey</li>
-                            <li>Robby Scott</li>
-                            <li>Sam Travis</li>
+                            <li><a href="https://www.baseball-reference.com/players/s/scottro02.shtml">Robby Scott</a></li>
+                            <li><a href="https://www.baseball-reference.com/players/t/travisa01.shtml">Sam Travis</a></li>
                         </ul>
                     </div>
                 </div>
