--- a/index.html
+++ b/index.html
@@ -15,23 +15,26 @@
             <a href="index.html">
                 <img src="RedSoxLogo.png" id="main_logo" />
             </a>
-            <h1>Welcome to Edward Kang's Boston Red Sox Information Webpage</h1>
+            <h1 class="text-center">Welcome to Edward Kang's Boston Red Sox Information Webpage</h1>
             <div class="row" id="menu_list">
                 <div class="col-sm">
                     <a href="roster.html">
-                        <span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span> Roster
+                        <p class="text-center"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span> Roster</p>
                     </a>
                 </div>
                 <div class="col-sm">
                     <a href="standing.html">
-                        <span class="glyphicon glyphicon-bullhorn" aria-hidden="true"></span> AL East Standing
+                        <p class="text-center"><span class="glyphicon glyphicon-bullhorn" aria-hidden="true"></span> AL East Standing</p>
                     </a>
                 </div>
                 <div class="col-sm">
                     <a href="site.html">
-                        <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> Related Sites
+                        <p class="text-center"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> Related Sites</p>
                     </a>
                 </div>
+            </div>
+            <div class="container">
+                <h2>You can check Red Sox current roster, AL East standings, and links to other Red Sox websites.</h2>
             </div>
         </div>
     </body>
