--- a/standing.html
+++ b/standing.html
@@ -4,6 +4,7 @@
         <title>
             Edward Kang CSCI S 33A Project 0
         </title>
+        <meta name="viewport" content="width=device-width, initial-scale=0.8, maximum-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
         integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
