--- a/standing.html
+++ b/standing.html
@@ -4,36 +4,39 @@
         <title>
             Edward Kang CSCI S 33A Project 0
         </title>
-        <meta name="viewport" content="width=device-width, initial-scale=0.8, maximum-scale=1">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
-        integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="myStyle.css">
     </head>
     <body>
         <div class="container">
+
+            <!--header, include image-->
             <a href="index.html">
                 <img src="RedSoxLogo.png" id="main_logo" />
             </a>
             <h1 class="text-center">Welcome to Edward Kang's Boston Red Sox Information Webpage</h1>
+
+            <!--menu, include Bootstrap component, column-->
             <div class="row" id="menu_list">
                 <div class="col-sm">
                     <a href="roster.html">
-                        <p class="text-center"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span> Roster</p>
+                        <p class="text-center">Roster<span class="badge badge-danger">New</span></p>
                     </a>
                 </div>
                 <div class="col-sm">
                     <a href="standing.html">
-                        <p class="text-center"><span class="glyphicon glyphicon-bullhorn" aria-hidden="true"></span> AL East Standing</p>
+                        <p class="text-center">AL East Standing</p>
                     </a>
                 </div>
                 <div class="col-sm">
                     <a href="site.html">
-                        <p class="text-center"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> Related Sites</p>
+                        <p class="text-center">Related Sites</p>
                     </a>
                 </div>
             </div>
+
+            <!--main content, include a table, images-->
             <div class="container">
                 <h2>2018 AL East Division Standing</h2>
                 <table border="1" id="content">
